fix documentation for create comment and prevent comment notification push to the commenter notification
