# controllers/commentCont.js
@@ -42,6 +42,9 @@ const User= require('../models/users');
         }
         const authorId= (result[0].author).valueOf();
         console.log(authorId);
+        //if authorId not same as req.body.commentBy._id
+
+        if(authorId !== (req.body.commentBy)._id){
          // push notification to author postNotification
         User.findByIdAndUpdate(authorId,{$addToSet : {postNotification : notifObj}},
         (err,post)=>{
@@ -53,6 +56,9 @@ const User= require('../models/users');
           res
           .status(200)
           .end()
-        })
+        })} else{
+          console.log('notification not pushed because you comment your own post')
+          res.sendStatus(200)
+        }
       })  
   }
